--- a/Toast Notification/style.css
+++ b/Toast Notification/style.css
@@ -43,4 +43,53 @@ body{
     box-shadow: 0 0  20px rgba(0, 0 , 0, 0.3);
     display: flex;
     align-items: center;
+    position: relative;
+    transform: translateX(100%);
+    animation: moveleft 0.5s linear forwards;
+}
+
+.toast i{
+    margin: 0 20px;
+    font-size: 35px;
+    color: green;
+    
+}
+
+.toast.error i{
+    color: red;
+}
+.toast.invalid i{
+    color: orangered;
+}
+
+.toast::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background-color: green;
+    animation: anim 3s linear forwards;
+}
+
+
+.toast.error::after{
+    background-color: red;
+}
+
+.toast.invalid::after{
+    background-color: orange;
+}
+
+@keyframes moveleft{
+    100%{
+        transform: translateX(0);
+    }
+}
+
+@keyframes anim{
+    100%{
+        width: 0;
+    }
 }
